--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -39,7 +39,7 @@ Removal of individuals based on relationship status via **plinkQC** is optimised
 to retain as many individuals as possible in the study.
 
 ```{r, echo = FALSE}
-knitr::include_graphics("docs/qc.png")
+knitr::include_graphics("qc.png")
 ```
 
 ## <i class="fa fa-rocket" aria-hidden="true"></i> Installation
