Update links, citation

--- a/README.Rmd
+++ b/README.Rmd
@@ -58,8 +58,9 @@ installed via
 install.packages("plinkQC")
 ```
 
-A log of version changes can be found [here](news/index.html).
+A log of version changes can be found [here](https://meyer-lab-cshl.github.io/plinkQC/news/index.html).
 
 ## <i class="fa fa-pencil" aria-hidden="true"></i> Citation
-Meyer HV (2018) plinkQC: Genotype quality control in genetic association
-studies. doi:10.5281/zenodo.3373798
+Meyer HV (2020) plinkQC: Genotype quality control in genetic association
+studies. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3934294.svg)](https://doi.org/10.5281/zenodo.3934294)
+
