--- a/vignettes/HapMap.Rmd
+++ b/vignettes/HapMap.Rmd
@@ -57,7 +57,7 @@ mkdir -r $qcdir/plink_log
 Hapmap phase 3 data (HapMapIII) is available in
 [PLINK text format](https://www.cog-genomics.org/plink/1.9/input#ped) at ncbi.
 In addition, a sample file with information about the individuals' ancestry
-is available and shoud be downloaded as in input for `plinkQC::chec_Ancestry()`.
+is available and should be downloaded as in input for `plinkQC::chec_Ancestry()`.
 The following code chunk downloads and unzips the data.
 ```{bash download, eval=FALSE}
 cd $refdir
@@ -118,7 +118,7 @@ awk '{print "chr" $1, $4 -1, $4, $2 }' $refdir/HapMapIII_NCBI36.bim | \
 ```
 
 [Note: In the official HapMap release, chromosome codes described above, however
-in the orignal download files (link above), no chr24 detected. I will keep this
+in the original download files (link above), no chr24 detected. I will keep this
 line in for completeness, but note, when inspecting file that no chr24/chrY are
 present.]
 
@@ -143,7 +143,7 @@ awk '{print $4, $3}' $refdir/HapMapIII_CGRCh37 > $refdir/HapMapIII_CGRCh37.pos
 ## Update the reference data
 We can now use PLINK to extract the mappable variants from the old build and
 update their position. After these steps, the HapMap III dataset can be used 
-for infering study ancestry as described in the corresponding [vignette](https://meyer-lab-cshl.github.io/plinkQC/articles/AncestryCheck.html).
+for inferring study ancestry as described in the corresponding [vignette](https://meyer-lab-cshl.github.io/plinkQC/articles/AncestryCheck.html).
 ```{bash update annotation, eval=FALSE}
 plink --bfile $refdir/HapMapIII_NCBI36 \
     --extract $refdir/HapMapIII_CGRCh37.snps \
